@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR
skinparam classAttributeIconSize 0 ' Remove circled class/interface icons

top to bottom direction

' === UI Package ===
package UI <<Rectangle>>  {
  Class "<<interface>>\nUi" as Ui
  Class UiManager
  Class MainWindow
  Class HelpWindow
  Class ResultDisplay
  Class StatusBarFooter
  Class CommandBox


    class PersonListPanel
    class ReminderListPanel



    class PersonCard
    class ReminderCard

}

package Model <<Rectangle>> {
  Class HiddenModel #FFFFFF
}

package Logic <<Rectangle>> {
  Class HiddenLogic #FFFFFF
}

Class HiddenOutside #FFFFFF
HiddenOutside ..> Ui

' === Inheritance ===
UiManager -|> Ui

' === Composition from MainWindow ===
UiManager --> MainWindow
MainWindow *-- CommandBox
MainWindow *-- ResultDisplay
MainWindow *-- PersonListPanel
MainWindow *-- ReminderListPanel
MainWindow *-- StatusBarFooter
MainWindow --> HelpWindow

PersonListPanel --> PersonCard
ReminderListPanel --> ReminderCard

' === External dependencies ===
ReminderCard ..> Model : uses data
PersonCard ..> Model : uses data
UiManager --> Logic
MainWindow --> Logic

' === NOTE to replace repeated inheritance ===
note bottom of ReminderCard
  All UI components inherit from UiPart<T>,
  an abstract base class that handles FXML loading.
end note

@enduml
